--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "antd": "^3.8.4",
     "babel-plugin-import": "^1.8.0",
+    "getos": "^3.1.0",
     "react": "^16.4.2",
     "react-app-rewired": "^1.5.2",
     "react-dom": "^16.4.2",
