--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.4.2",
     "react-app-rewired": "^1.5.2",
     "react-dom": "^16.4.2",
+    "react-intl": "^2.7.2",
     "react-scripts": "1.1.5"
   },
   "scripts": {
