Add and run prettier + pre-commit hook

--- a/package.json
+++ b/package.json
@@ -15,10 +15,20 @@
     "react-intl": "^2.7.2",
     "react-scripts": "1.1.5"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "husky": "^1.1.2",
+    "prettier": "^1.14.3",
+    "pretty-quick": "^1.8.0"
   }
 }
