Fix typos in prettier config file

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
     "singleQuote": true,
-    "semicolons": true,
+    "semi": true,
     "tabWidth": 2,
-    "trailingCommas": "none"
+    "trailingComma": "none"
 }
